--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@
 
     .imgUpload{
       width: 50%;
-      margin-left: 25%;
-      margin-right: 25%
+      margin-left: 50%;
+      margin-right: 50% ;
       height : 100px;
       margin-bottom: 40px;
       
